    exported but not the data constructors.
  - 'public export' means that the entire definition is exported.
* By default, names are 'private'. This can be altered with an %access
  directive as before.
* Exported types can only refer to other exported names
* Publicly exported definitions can only refer to publicly exported names

Minor language changes
----------------------

* The '[static]' annotation is changed to '%static' to be consistent with the
  other annotations.
* Added '%auto_implicits' directive. The default is '%auto_implicits on'.
  Placing '%auto_implicits off' in a source file means that after that
  point, any implicit arguments must be bound, e.g.:
    append : {n,m,a:_} -> Vect n a -> Vect m a -> Vect (n + m) a

  Only names which are used explicitly in the type need to be bound, e.g.:
    Here  : {x, xs : _} -> Elem x (x :: xs)

  In 'Here', there is no need to bind any of the variables in the type of
  'xs' (it could be e.g. List a or Vect n a; 'a' and 'n' will still be
  implicitly bound).

  You can still implicitly bind with 'using':

    using (xs : Vect _ _)
      data Elem  : {a, n : _} -> a -> Vect n a -> Type where
           Here  : {x : _} -> Elem x (x :: xs)
           There : {x, y : _} -> Elem x xs -> Elem x (y :: xs)

  However, note that *only* names which appear in *both* the using block
  *and* the type being defined will be implicitly bound. The following will
  therefore fail because 'n' isn't implicitly bound:

    using (xs : Vect n a)
      bad : Elem x xs -> Elem x (y :: xs)

New in 0.10:
============

* 'class' and 'instance' are now deprecated keywords. They have been
  replaced by 'interface' and 'implementation' respectively. This is to
  properly reflect their purpose.
* (/) operator moved into new Fractional interface.
* Idris' logging infrastructure has been categorised. Command line and repl
  are available. For command line the option `--logging-categories CATS`