@@ -3,3 +3,6 @@
 Before calling callback
 In an Idris callback
 After calling callback
+00000377
+I'm dynamic 3
+6
